agrega el menu donde se encuentran los nombres de los estudiantes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ConversorV2">
         <activity
+            android:name=".Estudiantes"
+            android:exported="false" />
+        <activity
             android:name=".Change"
             android:exported="false" />
         <activity
